improve local search with candidate moves